@@ -100,6 +100,10 @@ public class EnvironmentSetup {
 	}
 
 	public static void checkFileSetup() {
+		checkDirectory(DirectoryManager.userSettingsDir, "user settings");
+		checkDirectory(DirectoryManager.atlasProfilesDir, "atlas profile");
+		checkDirectory(DirectoryManager.tileStoreDir, "tile store");
+		checkDirectory(DirectoryManager.tempDir, "temporary atlas download");
 		if (!Settings.FILE.exists()) {
 			try {
 				FIRST_START = true;
@@ -114,19 +118,21 @@ public class EnvironmentSetup {
 				System.exit(1);
 			}
 		}
+	}
+
+	protected static void checkDirectory(File dir, String dirName) {
 		try {
-			Utilities.mkDirs(DirectoryManager.tempDir);
+			Utilities.mkDirs(dir);
 		} catch (IOException e) {
-			log.error("Error while creating temporary atlas download directory: " + e.getMessage(), e);
+			String msg = "Error while creating " + dirName + " directory";
+			log.error(msg + ": " + e.getMessage(), e);
 			String[] options = { "Exit", "Show error report" };
-			int a = JOptionPane.showOptionDialog(null,
-					"Error while creating temporary atlas download directory - program will exit.", "Error", 0,
+			int a = JOptionPane.showOptionDialog(null, msg + " - program will exit.", "Error", 0,
 					JOptionPane.ERROR_MESSAGE, null, options, options[0]);
 			if (a == 1)
 				GUIExceptionHandler.showExceptionDialog(e);
 			System.exit(1);
 		}
-
 	}
 
 	public static void createDefaultAtlases() {
